--- a/src/app/main/listing/listing-form/vehicle-listing/people/people.component.html
+++ b/src/app/main/listing/listing-form/vehicle-listing/people/people.component.html
@@ -9,7 +9,14 @@
     </button>
   </div>
 
-  <button mat-raised-button data-btn-add-person color="primary" class="add-person" (click)="addPerson()" [disabled]="formGroup.disabled">
+  <button
+    mat-raised-button
+    data-btn-add-person
+    color="primary"
+    class="add-person"
+    (click)="addPerson()"
+    [disabled]="formGroup.disabled"
+  >
     Add a person
   </button>
 </fieldset>
